--- a/Pages/Error.cshtml
+++ b/Pages/Error.cshtml
@@ -6,9 +6,10 @@
 
 <div class="container">
 
-    <h1 class="text-danger">Error.</h1>
-    <h2 class="text-danger">An error occurred while processing your request.</h2>
-
+    <h1 class="text-danger">There was an error!! :(</h1>
+    <br /><br />
+    <h2 class="text-danger">@Model.sErrorMessage</h2>
+    <br /><br />
     @if (Model.ShowRequestId)
     {
         <p>
@@ -16,15 +17,7 @@
         </p>
     }
     
-    <h3>Development Mode</h3>
-    <p>
-        Swapping to the <strong>Development</strong> environment displays detailed information about the error that occurred.
-    </p>
-    <p>
-        <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-        It can result in displaying sensitive information from exceptions to end users.
-        For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-        and restarting the app.
-    </p>
+    <h3>Please report this error to the IT team, since it probably means nowt to you.</h3>
+
 
 </div>
